# euaiact

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/euaiact/: __init__.py  __main__.py  _dom.py  act.py  model.py  navigation.py  parser.py  references.py
src/euaiact/data/: eu_ai_act_2024_1689_en.html
tests/: test_euaiact.py
